[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = []
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "langchain-core<1.0.0,>=0.3.15",
    "superlinked==33.5.1",
    "pandas>=2.2.0,<3.0.0",
]
name = "langchain-superlinked"
version = "0.1.0"
description = "An integration package connecting Superlinked and LangChain"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/superlinked/langchain-superlinked"
Repository = "https://github.com/superlinked/langchain-superlinked"
"Source Code" = "https://github.com/superlinked/langchain-superlinked"
"Release Notes" = "https://github.com/superlinked/langchain-superlinked/releases"
"Bug Tracker" = "https://github.com/superlinked/langchain-superlinked/issues"

[dependency-groups]
unit = [
    "pytest<8.0.0,>=7.3.0",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pytest-socket<1.0.0,>=0.7.0",
    "pytest-watcher<1.0.0,>=0.3.4",
]
test = [
    "pytest<8.0.0,>=7.3.0",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pytest-socket<1.0.0,>=0.7.0",
    "pytest-watcher<1.0.0,>=0.3.4",
    "langchain-core",
    "langchain-tests",
]
codespell = ["codespell<3.0.0,>=2.2.0"]
test_integration = []
lint = ["ruff<0.6,>=0.5.0"]
dev = [
    "langchain-core",
    "pre-commit>=3.7.0",
    "build>=1.2.1",
    "twine>=5.1.0",
    "wheel>=0.43.0",
    "ruff<0.6,>=0.5.0",
    "mypy<2.0,>=1.10",
    "codespell<3.0.0,>=2.2.0",
    "pytest<8.0.0,>=7.3.0",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pytest-socket<1.0.0,>=0.7.0",
    "pytest-watcher<1.0.0,>=0.3.4",
]
typing = ["mypy<2.0,>=1.10", "langchain-core"]



[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201"]
"scripts/**/*.py" = ["T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.codespell]
skip = ".git,*.lock,*.svg,*.json,*.yml,*.yaml,*.md,*.ipynb,.mypy_cache,.ruff_cache,.venv,dist,build"
ignore-words-list = "crate,ser,fo"
